# dev-hatena-rss

./: .gitignore  README.md  create_rss_feed.py  pyproject.toml
.github/workflows/: scrape.yml
public/rss/: hatena_dev_entries.xml
