[tool.poetry]
name = "dev-hatena-rss"
version = "0.1.0"
description = ""
authors = ["orion0616 <earth.nobu.light@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
feedgen = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
